# semitrailer

semitrailer_controller/: CMakeLists.txt  package.xml
semitrailer_controller/include/semitrailer_controller/: non_linear_functor.hpp  semitrailer_nlmpc.hpp  simple_semitrailer_navigation.hpp
semitrailer_controller/src/: semitrailer_nlmpc.cpp  simple_semitrailer_navigation.cpp
semitrailer_description/: CMakeLists.txt  package.xml
semitrailer_description/urdf/: material.urdf  semitrailer.urdf  wheel.urdf
semitrailer_interfaces/: CMakeLists.txt  package.xml
semitrailer_interfaces/action/: SimpleNavigation.action
semitrailer_interfaces/msg/: Input.msg  State.msg
semitrailer_simulation/: CMakeLists.txt  package.xml
semitrailer_simulation/config/: joint_state_publisher.yaml  semitrailer_20.yaml  semitrailer_40.yaml  semitrailer_simulator.yaml  simple_semitrailer_navigation.yaml
semitrailer_simulation/include/semitrailer_simulation/: semitrailer_simulator.hpp
semitrailer_simulation/launch/: bringup.launch.py  simple_semitrailer_navigation.launch.py
semitrailer_simulation/rviz/: default.rviz
semitrailer_simulation/src/: semitrailer_simulator.cpp
